# haskell-xprop-tree

./: README.md  stack.yaml  xprop-tree.cabal
src/: Main.hs
