name:                xprop-tree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benizi/haskell-xprop-tree
license:             MIT
license-file:        LICENSE
author:              Benjamin R. Haskell
-- maintainer:
copyright:           2017
-- category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable xprop-tree
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , transformers == 0.5.*
                     , safe-exceptions == 0.1.*
                     , X11 == 1.8.*
